<resources>
    <string name="app_name">SSSSO Karimnagar (OLD)</string>
    <string name="name">Sri satya sai seva organization</string>
    <string name="label_network_error_message">network issue</string>
    <string name="label_network_button_text">Tryagain</string>

    <string name="mobile"><font size="10">Mobile Number</font></string>
    <string name="password"><font size="10">Password</font></string>
    <string name="username"><font size="10">username</font></string>
    <string name="login_now">login</string>
    <string name="register_now">Register</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?Login</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>
    <string name="dob"><font size="10">Date of birth</font></string>
    <string name="your_string_here">This is an &lt;u&gt;underline&lt;/u&gt;.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_subscribed">success</string>
    <string name="msg_subscribe_failed">failed</string>
    <string name="channel_name">Sri satya sai baba mandhir</string>
    <string name="channcel_desc">desc</string>
    <string name="toolbar_name">SSSSO Karimnagar (OLD)</string>
    <string name="notifictaion_1">Bhagawan sri sathya sai mukoti sai gayatri purnahuthi.(karimnagar dist activity) 20 nov 2020</string>
    <string name="notifictaion_2">Gramaseva on 22 nov 2020 ( karimnagar, sircila, jagityal, pedapply)</string>
    <string name="notifictaion_3"> 95th birthday celebration (new 23 Nov 2020 ) all districts </string>
    <string name="notifictaion_4">SSSSO Karimnagar (OLD)</string>
    <string name="notifictaion_5">SSSSO Karimnagar (OLD)</string>
</resources>