<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:id="@+id/relative_layout"
    tools:context=".Activties.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        tools:context=".Activties.LoginActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:contentDescription="logo"
            android:src="@drawable/saibaba_logo"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/et_bg"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/icon" />
        <EditText
            android:id="@+id/input_mobilenum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_bg"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:padding="16dp"
            android:maxLength="10"
            android:textColorHint="@color/login_form_details"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/input_name"
            />
        <EditText
            android:id="@+id/input_dob"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_bg"
            android:hint="@string/dob"
            android:inputType="date"
            android:padding="16dp"
            android:maxLength="10"
            android:textColorHint="@color/login_form_details"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/input_mobilenum"
            />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/input_dob"
            android:drawableRight="@drawable/ic_eye" />
        <RadioGroup
            android:id="@+id/radio_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/input_password"
            tools:ignore="MissingConstraints">
            <RadioButton
                android:id="@+id/rb_reg_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Male"/>
            <RadioButton
                android:id="@+id/rb_reg_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:text="Female"/>
        </RadioGroup>
        <Button
            android:id="@+id/btn_registration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_bg"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:textColor="@color/login_form_details_medium"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/radio_gender" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/don_t_remember_password"
            android:textColor="@color/login_form_details"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/btn_registration" />

        <View
            android:id="@+id/footer_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="50dp"
            android:background="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/link_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/login_form_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer_line" />

        <TextView
            android:id="@+id/facebook_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawablePadding="8dp"
            android:text="@string/sign_in_with_facebook"
            android:textColor="@color/login_form_details"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/footer_line"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left" />

        <View
            android:id="@+id/line1"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="@color/login_form_details_medium"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password"
            app:layout_constraintBottom_toTopOf="@+id/facebook_login"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintEnd_toStartOf="@+id/or"/>

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/login_form_details"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/line1"
            app:layout_constraintTop_toTopOf="@+id/line1"
            app:layout_constraintEnd_toStartOf="@+id/line2"
            app:layout_constraintStart_toEndOf="@+id/line1" />

        <View
            android:id="@+id/line2"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:background="@color/login_form_details_medium"
            app:layout_constraintBottom_toBottomOf="@+id/or"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/or"
            app:layout_constraintTop_toTopOf="@+id/or" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>